# sovra

./: .gitignore  Cargo.toml  LICENSE  README.md  affected.rs  collect.rs  imports.rs  main.rs  mise.toml  package.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
fixtures/: bad-import.js  built-in-module.mjs
fixtures/modules/: index.mjs
fixtures/nested/: all.js  another-module.js  assets.js  circular-1.js  circular-2.js  circular-3.js  circular.spec.js  module.js  module.spec.js  sub-module.js  sub-module.spec.js
fixtures/npm/: intermediate.js  uses-lodash-fp.js  uses-other-foo.js  uses-scope-bar.js  uses-scope-foo.js
fixtures/require/: context.js  module.js  suite.spec.js
fixtures/require-alias/: uses-jest-actual.js
fixtures/ts-alias/: tsconfig.json
fixtures/typescript/: aliased.ts  suite.spec.ts  tsconfig.json  type-import.ts
fixtures/unresolved-pkg/: uses-not-installed-deep.js  uses-not-installed.js  uses-scoped-missing.js
fixtures/yarn-workspace/: package.json
fixtures/yarn-workspace/app/: index.js  package.json
napi/: Cargo.toml  index.d.ts  index.js
napi/src/: lib.rs  options.rs
napi/test/: sanity.spec.mjs
npm/: README.md  package.json
npm/sovra/: README.md  package.json
npm/sovra/scripts/: generate-packages.mjs
src/: affected.rs  changeset.rs  imports.rs  lib.rs
