[workspace]
members  = ["napi"]
resolver = "2"

[package]
name         = "sovra"
version      = "0.1.0"
authors      = ["Joel Arvidsson <joel@oblador.se>"]
categories   = ["development-tools"]
description  = "JavaScript test decider using Oxc"
edition      = "2021"
homepage     = "https://github.com/oblador/sovra"
keywords     = ["node", "oxc", "test", "test-decider", "affected"]
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/oblador/sovra"
rust-version = "1.70"
include      = ["/src"]

[lib]
doctest = false

[dependencies]
oxc           = "0.32.0"
oxc_allocator = "0.32.0"
oxc_ast       = "0.32.0"
oxc_parser    = "0.32.0"
oxc_resolver  = "1.12.0"
oxc_span      = "0.32.0"

# For napi
[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols" # set to `false` for debug information
debug         = false     # set to `true` for debug information
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
