[workspace]
members  = ["napi"]
resolver = "2"

[package]
name         = "sovra"
version      = "0.4.1"
authors      = ["Joel Arvidsson <joel@oblador.se>"]
categories   = ["development-tools"]
description  = "JavaScript test decider using Oxc"
edition      = "2021"
homepage     = "https://github.com/oblador/sovra"
keywords     = ["node", "oxc", "test", "test-decider", "affected"]
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/oblador/sovra"
rust-version = "1.93"
include      = ["/src"]

[lib]
doctest = false

[dependencies]
oxc           = "0.129.0"
oxc_allocator = "0.129.0"
oxc_ast       = "0.129.0"
oxc_ast_visit = "0.129.0"
oxc_parser    = "0.129.0"
oxc_resolver  = "11.19.1"
oxc_span      = "0.129.0"
rayon         = "1"

# For napi
[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols" # set to `false` for debug information
debug         = false     # set to `true` for debug information
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
