[package]
name         = "oxc_napi_affected"
version      = "0.0.0"
publish      = false
edition      = "2021"
rust-version = "1.71"

[lib]
crate-type = ["cdylib"]
test       = false
doctest    = false

[dependencies]
oxc_affected = { path = ".." }
oxc_resolver = "1.12.0"
napi = { version = "3.0.0-alpha", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = { version = "3.0.0-alpha" }

[build-dependencies]
napi-build = "2.1.3"

[package.metadata.cargo-machete]
ignored = ["napi"]
