[package]
name         = "sovra_napi"
version      = "0.0.0"
publish      = false
edition      = "2021"
rust-version = "1.93"

[lib]
crate-type = ["cdylib"]
test       = false
doctest    = false

[dependencies]
oxc_resolver = "11.19.1"
sovra = { path = ".." }
napi = { version = "3.8.5", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = { version = "3.5.4" }

[build-dependencies]
napi-build = "2.3.1"

[package.metadata.cargo-machete]
ignored = ["napi"]
